--- a/landing.html
+++ b/landing.html
@@ -33,10 +33,10 @@
         </div>
 
         <!-- wave -->
-       
+    <div> 
         <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#fafafa" fill-opacity="1" d="M0,224L48,213.3C96,203,192,181,288,154.7C384,128,480,96,576,101.3C672,107,768,149,864,170.7C960,192,1056,192,1152,170.7C1248,149,1344,107,1392,85.3L1440,64L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
-          </svg>
+        </svg>
     </div>
 
     <div class="test">
@@ -44,10 +44,10 @@
         <h3>Our Partners</h3>
         <hr>
         <div class="our-partners-inner">
-            <a href="#"><img src="public/Skyscanner.svg" alt=""></a>
-            <a href="#"><img src="public/Kayak.svg" alt=""></a>
-            <a href="#"><img src="public/airb.png" alt=""></a>
-            <a href="#"><img src="public/book.png" alt=""></a>
+            <a href="#"><img src="Skyscanner.svg" alt=""></a>
+            <a href="#"><img src="Kayak.svg" alt=""></a>
+            <a href="#"><img src="airb.png" alt=""></a>
+            <a href="#"><img src="book.png" alt=""></a>
         </div>
     </div>
 
