--- a/landing.html
+++ b/landing.html
@@ -44,10 +44,10 @@
         <h3>Our Partners</h3>
         <hr>
         <div class="our-partners-inner">
-            <a href="#"><img src="Skyscanner.svg" alt=""></a>
-            <a href="#"><img src="Kayak.svg" alt=""></a>
-            <a href="#"><img src="airb.png" alt=""></a>
-            <a href="#"><img src="book.png" alt=""></a>
+            <a href="#"><img src="test.github.io/Skyscanner.svg" alt=""></a>
+            <a href="#"><img src="test.github.io/Kayak.svg" alt=""></a>
+            <a href="#"><img src="test.github.io/airb.png" alt=""></a>
+            <a href="#"><img src="test.github.io/book.png" alt=""></a>
         </div>
     </div>
 
