--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page test 1</title>
-    <link href="style.css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nova+Round&display=swap">
+    <link href="test.github.io/style.css" rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Nova+Round&display=swap">
    
 </head>
 <body>
